<resources>
    <string name="app_name">Laboratorio_04</string>
    <string name="hint_name">Nombre</string>
    <string name="form_title_text">Rellena la siguiente información</string>
    <string name="btn_save">Guardar</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_phone">Número de teléfono</string>
    <string name="btn_share">Compartir</string>
    <string name="text_name">Nombre</string>
    <string name="text_email">Correo electrónico</string>
    <string name="text_phone">Número de teléfono</string>
    <string name="title_result_activity">Confirma tu información</string>
    <string name="share_data">This is my personal information: %1$s ,  %2|$s ,  %3$s</string>
</resources>